package org.printscript.formatter

import org.printscript.formatter.config.FormatterConfig

data class FormatterContext(val config: FormatterConfig)
